# amber

./: .gitignore  2.0_STATUS.md  CLAUDE.md  README.md  ROADMAP.md
docs/: prerequisites-fedora.md
documentation/: prerequisites-fedora.md
packaging/linux/: appimage.dockerfile
src/: CMakeLists.txt  main.cpp
src/dialogs/: footagerelinkdialog.cpp  newsequencedialog.cpp  preferencesdialog.cpp  replaceclipmediadialog.cpp
src/effects/: effect.cpp  effect.h
src/effects/internal/: richtexteffect.cpp  richtexteffect.h
src/effects/shaders/: directionalblur.frag  directionalblur.xml  huesatbri.frag  huesatbri.xml
src/engine/: cacher.cpp  cacher.h  cacher_video.cpp  clip.h
src/engine/undo/: undostack.cpp  undostack.h
src/global/: config.cpp  config.h  global.cpp
src/panels/: effectcontrols.cpp  effectcontrols.h  grapheditor.cpp  grapheditor.h  panels.cpp  project.cpp  timeline.cpp  timeline.h  timeline_ui.cpp  undohistorypanel.cpp  undohistorypanel.h
src/rendering/: renderfunctions.cpp
src/tests/: test_effects_gpu.cpp
src/ts/: amber_ar.ts  amber_bs.ts  amber_cs.ts  amber_de.ts  amber_es.ts  amber_fr.ts  amber_id.ts  amber_it.ts  amber_pt-BR.ts  amber_ru.ts  amber_sr.ts  amber_tr.ts  amber_uk.ts  amber_zh-CN.ts  amber_zh-TW.ts
src/ui/: effectui.cpp  effectui.h  mainwindow.cpp  mainwindow.h  timelineheader.cpp  timelineheader.h  timelinewidget.cpp  timelinewidget.h  timelinewidget_menu.cpp  timelinewidget_paint.cpp
